--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "leksak",
   "private": true,
+  "homepage": "https://your-username.github.io/leksak"
   "version": "1.0.0",
   "type": "module",
   "scripts": {
